--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "epic-button",
-  "version": "0.0.1",
+  "name": "chat-room",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
